# rust-actix-api

./: .env.example  Cargo.toml  Dockerfile  Makefile  README.md  diesel.toml
.github/workflows/: rust.yml
migrations/2022-05-06-191948_create_messages/: up.sql
src/: main.rs
src/application/: create_message_service.rs  destroy_message_service.rs  find_message_service.rs  get_message_service.rs  mod.rs  upsert_message_service.rs
src/domain/models/: message.rs
src/infrastructure/: mod.rs
src/infrastructure/db/: schema.rs
src/infrastructure/repository/: message_repository.rs
src/infrastructure/request/: message_request.rs  mod.rs
src/infrastructure/response/: error_response.rs
src/presentation/: message_controller.rs
src/server/: router.rs
src/server/middleware/: create_context.rs  mod.rs
